# devhub

./: .gitignore  01_REQUIREMENTS.md  02_ARCHITECTURE.md  03_DETAILED_DESIGN.md  CLAUDE.md  CODE_QUALITY_REPORT.md  Cargo.toml  DEPLOYMENT_REPORT.md  LICENSE  PROJECT_COMPLETE.md  README.md  WORK_LOG.md  tauri.conf.json
assets/: mirrors.json
examples/: test_core_functions.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/: config.rs  error.rs  lib.rs  main.rs  traits.rs  types.rs  utils.rs
src/commands/: mod.rs
src/core/: command.rs  detector.rs  mirror.rs  mod.rs
src/services/: mod.rs  shell.rs  speed_test.rs
src/sources/: apt.rs  brew.rs  cargo.rs  conda.rs  docker.rs  git.rs  go.rs  gradle.rs  maven.rs  mod.rs  npm.rs  pip.rs  pnpm.rs  uv.rs  yarn.rs
src/tools/: mod.rs  python.rs
tests/: cli_test.rs  integration_test.rs
