[package]
name = "devhub"
version = "0.1.0"
edition = "2021"
authors = ["Frank Hu <hutiefang@gmail.com>"]
description = "优雅轻巧的开发环境管理平台"
homepage = "https://github.com/hutiefang76/devhub"
repository = "https://github.com/hutiefang76/devhub"
license = "MIT"

[dependencies]
# Tauri框架
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP客户端（测速）
reqwest = { version = "0.12", features = ["json"] }

# 工具库
regex = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"

[build-dependencies]
tauri-build = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
